-changes related to unihash